# skene

./: .gitignore  .sqlfluff  README.md  RELEASING.md  pyproject.toml  releases.json
.cursor-plugin/: marketplace.json
.github/: CODEOWNERS
.github/translations/: README.da.md  README.de.md  README.es.md  README.fi.md  README.fr.md  README.no.md  README.pl.md  README.sv.md
.github/workflows/: ci.yml  publish.yml  skills-ci.yml  skills-publish.yml  tui-ci.yml  tui-release.yml
benchmarks/: run.py
docs/: index.md  llms.txt  troubleshooting.md
skene-db/: LICENSE  README.md
skened-poc/: README.md  pyproject.toml
skened-poc/src/skened/: __init__.py  __main__.py  analyzer.py  api.py  cli.py  comparison.py  config.py  db.py  git_service.py  jobs.py  journey.py  models.py  monitor.py  registry.py  service.py  storage.py
skened-poc/src/skened/journey_pipeline/: __init__.py  agent_loop.py  assemble.py  branch_agent.py  candidate.py  classify.py  code_agent.py  extract.py  factory.py  fs_tools.py  llm.py  merge.py  pipeline.py  stages.py
skened-poc/src/skened/web/: index.html
skened-poc/tests/: conftest.py  test_api.py  test_branch_analysis.py  test_comparison.py  test_git_service.py  test_gold.py  test_jobs.py  test_llm.py  test_monitor.py  test_pipeline.py  test_registry.py  test_settings.py
skills/: README.md  SKILL.md  package-lock.json  package.json  setup.js  setup.mjs
supabase-skills/: README.md  SKILL.md
tests/: test_engine_generator.py  test_engine_storage.py  test_secret_store.py
tui/: Makefile  README.md  go.mod  go.sum  install.sh
(+195 files in other folders)
